# puppycad

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  biome.json  constraint-system-plan.md  cube-10mm.pcad  package-lock.json  package.json  part.test.ts  plan.md  puppycad.ts  scemantic.test.ts  tsconfig.json
cli/: Cargo.toml
cli/src/: args.rs  lib.rs  main.rs  node_editor.rs  parse_cmd.rs  project_items.rs  ui.rs
cli/tests/: render_e2e.rs  validate_e2e.rs
core/: Cargo.toml
daemon/: Cargo.toml
daemon/src/: api.rs  args.rs  main.rs
docs/: NodeEditor.md  PartStudio.md  PuppyCadDSL.md  RenderUiControls.md  cli-plan.md
engine/: Cargo.toml
engine/src/: api.rs  args.rs  codegen.rs  eval.rs  main.rs  parse_cmd.rs  types.rs
engine/tests/: render_e2e.rs  validate_e2e.rs
examples/: cube.pcad  puppybot.pcad  puppybot.ts
spec/: puppycad.tex
src/: app.ts  assembly.ts  canvas.ts  cli.ts  contract.ts  diagram.ts  dock-layout.ts  index.html  ir.ts  main.ts  mcp.ts  part-actions.ts  part-quick-actions.ts  part.test.ts  part.ts  pcb.ts  project-commands.ts  project-file.ts  project-list.ts  project-view.ts  project.ts  projects.ts  puppycad-types.ts  puppycad.ts  render.ts  scemantic.test.ts  schema.ts  schemantic.ts  serilization.ts  server.ts  styles.css  types.ts  ui.ts
test/: cli.test.ts  deserialize.test.ts  dock-layout.test.ts  feature-alias-types.test.ts  part-actions.test.ts  part-editor.test.ts  part-quick-actions.test.ts  pcad-node-editor.test.ts  pcad-project.test.ts  project-commands.test.ts  project-file.test.ts  project-history.test.ts  (+6 more)
(+40 files in other folders)
