[package]
name = "puppycad"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
pge = { workspace = true, features = ["wgpu_winit"] }
puppycad-core = { path = "../core" }
serde_json = "1.0.140"
eframe = { version = "0.33.3", features = ["wgpu"] }
bytemuck = { version = "1.23.2", features = ["derive"] }
