[package]
name = "puppycad-daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "puppycadd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "fast-rng"] }
pge = { path = "../pge/pge", features = ["wgpu_winit"] }
puppycad-core = { path = "../core" }
